Added method to update ToDo and decorators for documentation
