# src/models/interfaces/todo.interface.ts
@@ -1,5 +1,14 @@
-export interface ITodo {
+/**
+ * Schema of all ToDos
+ */
+export interface TodoSchema {
   name: string,
   priority: string,
   completed: boolean
+}
+
+export interface IUpdatedTodo {
+  name?: string,
+  priority?: string,
+  completed?: boolean
 }
