# src/models/schemas/todo.ts
@@ -1,8 +1,8 @@
 import mongoose from 'mongoose';
-import { ITodo } from '../interfaces/todo.interface';
+import { TodoSchema } from '../interfaces/todo.interface';
 
 export const todoEntity = () => {
-  const todoSchema = new mongoose.Schema<ITodo>({
+  const todoSchema = new mongoose.Schema<TodoSchema>({
     name: { type: String, required: true },
     priority: { type: String, required: true },
     completed: { type: Boolean, required: true }
